; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_AddIdentityCLUT16.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_AddIdentityCLUT16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.AddIdentityCLUT16.Table = private unnamed_addr constant [24 x i32] [i32 0, i32 0, i32 0, i32 0, i32 0, i32 65535, i32 0, i32 65535, i32 0, i32 0, i32 65535, i32 65535, i32 65535, i32 0, i32 0, i32 65535, i32 0, i32 65535, i32 65535, i32 65535, i32 0, i32 65535, i32 65535, i32 65535], align 16
@cmsAT_END = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @AddIdentityCLUT16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AddIdentityCLUT16(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [24 x i32], align 16
  store i32* %0, i32** %2, align 8
  %4 = bitcast [24 x i32]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 bitcast ([24 x i32]* @__const.AddIdentityCLUT16.Table to i8*), i64 96, i1 false)
  %5 = call i32 (...) @DbgThread()
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @cmsAT_END, align 4
  %8 = call i32 (...) @DbgThread()
  %9 = getelementptr inbounds [24 x i32], [24 x i32]* %3, i64 0, i64 0
  %10 = call i32 @cmsStageAllocCLut16bit(i32 %8, i32 2, i32 3, i32 3, i32* %9)
  %11 = call i32 @cmsPipelineInsertStage(i32 %5, i32* %6, i32 %7, i32 %10)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cmsPipelineInsertStage(i32, i32*, i32, i32) #2

declare dso_local i32 @DbgThread(...) #2

declare dso_local i32 @cmsStageAllocCLut16bit(i32, i32, i32, i32, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
